# mcp-cookie-vault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: DEVELOPER_GUIDE.md
mcp_cookie_vault/: __init__.py  __main__.py  config.py  models.py  server.py  storage.py
tests/: __init__.py  test_config.py  test_models.py  test_storage.py
